[package]
name = "docwen"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
toml = "0.8"
walkdir = "2.5.0"
clap = { version = "4.4", features = ["derive"]}
anyhow = "1.0"
tree-sitter = "0.25.6"
tree-sitter-cpp =  "0.23.4"

[dev-dependencies]
tempfile = "3.10"